# SFC-errors

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/: rc_test_confident_model.json  rc_test_confident_model_salient_circuit.json  rc_train_processed.csv
notebooks/error_scores/: validate_error_scores.ipynb
notebooks/error_scores/script/: analyze_error_scores.py  validate_error_scores.py
notebooks/main/: ablation_restoration_main.ipynb
notebooks/main/script/: ablation_restoration_main.py  compute_mean_activations.py
notebooks/stage_1/script/: analyze_error_scores.py  compute_error_scores.py  validate_error_scores.py
notebooks/stage_2/: compute_mean_activations.ipynb
notebooks/stage_2/script/: ablate_errors_but_restore_features.py  ablation_restoration_main.py  ablation_restoration_main_GF-Copy1.py  analyze_faithfulness_outliers.py  compute_mean_activations.py  evaluate_circuit_faithfulness.py
sfc-errors/classes/: sfc_data_loader.py  sfc_evaluator.py  sfc_model.py  sfc_node_scores.py
sfc-errors/notebooks/stage_1/: validate_error_scores.ipynb
sfc-errors/utils/: data_filter.py  enums.py  error_patching.py
