[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfc-errors"
version = "0.0.1"
description = "AISC project aimed to understand the functional role of error nodes in SFC"
authors = [
  { name = "Taras Kutsyk \u0026 Tim Hua" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["sfc-errors"]
force_sort_within_sections = true
